@@ -11,7 +11,7 @@
 
 #define CMDSTATUS_SUCCESS           0
 #define CMDSTATUS_BADQUESTION       10
-#define CMDSTATUS_BADPARAM          10
+#define CMDSTATUS_BADPARAM          15
 #define CMDSTATUS_SYNTAXERROR       20
 #define CMDSTATUS_INPUTINVISIBLE    30
 #define CMDSTATUS_BADVERSION        30
